--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for XML-Toolkit
 0.03   2008-11-13
      + Fix a bug in the ClassTemplate noticed by Confound
+     + Update to use the QuoteCharecter option in XML::SAX::Writer 0.51 
+     + Update to use sort_order for controlling order of XML elements 
      
 0.02   2008-11-12 21:33
 	   + Fix Missing Dep
