--- a/Changes
+++ b/Changes
@@ -1,28 +1,34 @@
 Revision history for XML-Toolkit
-0.06	2009-06-04
-		+ add support for parsing name-spaced elements
-			- serialization currently does *NOT* work
-			+ added tests 
-		+ Added documentation
-		+ Add more examples
-		+ rename make_classes, and set it up to install
-		+ update Makefile.PL to include Repository info
-	
+0.07    ???
+        + Moved script to `xmltk` and MooseX::App::Cmd
+        + Namespace Aware Loader
+        + Update examples to use the new namespace awareness
+        + Change the defaults to the namespace aware classes
+        
+0.06    2009-06-04
+        + add support for parsing name-spaced elements
+            - serialization currently does *NOT* work
+            + added tests 
+        + Added documentation
+        + Add more examples
+        + rename make_classes, and set it up to install
+        + update Makefile.PL to include Repository info
+    
 0.05   2009-01-29
-	 + Added Documentation
-	
+        + Added Documentation
+    
 0.04   2008-11-19
-     + Fix typo in API of upstream XML::SAX::Filter
+        + Fix typo in API of upstream XML::SAX::Filter
 
 0.03   2008-11-13
-     + Fix a bug in the ClassTemplate noticed by Confound
-     + Update to use the QuoteCharecter option in XML::SAX::Writer 0.51 
-     + Update to use sort_order for controlling order of XML elements 
+        + Fix a bug in the ClassTemplate noticed by Confound
+        + Update to use the QuoteCharecter option in XML::SAX::Writer 0.51 
+        + Update to use sort_order for controlling order of XML elements 
      
 0.02   2008-11-12 21:33
-	   + Fix Missing Dep
-	   + Add Dep Version Numbers
-	
+       + Fix Missing Dep
+       + Add Dep Version Numbers
+    
 0.0.1  Tue Apr 22 11:58:53 2008
        Initial release.
 
