--- a/Changes
+++ b/Changes
@@ -1,9 +1,11 @@
 Revision history for XML-Toolkit
 0.07    ???
+        + Significant reorganization of the class layout
+        + Some performance tweaks 
         + Moved script to `xmltk` and MooseX::App::Cmd
-        + Namespace Aware Loader and Builder
-        + Update examples to use the new namespace awareness
-        + Change the defaults to the namespace aware classes
+        + Namespace Aware Loader and Builder (robinsmidsrod)
+            + Update examples to use the new namespace awareness
+            + Change the defaults to the namespace aware classes
         
 0.06    2009-06-04
         + add support for parsing name-spaced elements
